Bug 584313 - if a message contains any style (element or tag attribute), it should not be convertible to plain text. r=mkmelin